# SmartMDAO

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  run_all.py
.github/workflows/: ci.yml
scripts/: adapt_external_functions_with_same_name.py  basic_ml_orchestrator.py  basic_solvers_demo.py  caching_hybrid_solver.py  caching_linear_solver.py  define_pipeline_via_decorators.py  golinsky_benchmark_mdo.py  hs71_benchmark_mdo.py  ideal_pipeline_demo.py  non_numeric_convergence_demo.py  optimizer_backends_demo.py  readme_quick_start.py  run_adapter_demo.py  run_caching_demo.py  run_decorators_usage.py  run_iterative_solver.py  run_iterative_solver_complex.py  run_ml_pipeline.py  run_pipeline_demo.py  run_test.py  sellar_benchmark.py  sellar_benchmark_mda.py  sellar_benchmark_mdo_openturns.py  sellar_benchmark_mdo_scipy.py  sellar_benchmark_mdo_scripy.py  ssbj_analytical_benchmark_mdo.py  test_hybrid_workflow.py  three_level_iterative_solver.py  type_validation_demo.py
smart_pipeline/: __init__.py  cache.py  core.py  execution.py  executor.py  logging_config.py  main.py  models.py  optimization.py  pipeline.py  pipeline_test.py  solvers.py  utils.py  visualization.py
smartmdao/: __init__.py  cache.py  core.py  executor.py  graph.py  logging_config.py  main.py  models.py  optimization.py  solvers.py  validation.py  visualization.py
tests/: conftest.py  test_basic.py  test_cache.py  test_coverage_gap.py  test_executor.py  test_optimization.py  test_optimizers.py  test_pipeline_and_viz.py  test_solvers.py  test_validation.py  test_visualization.py
tests/regression/: _assertions.py  test_golinski_benchmark.py  test_hs71_benchmark.py  test_sellar_benchmark.py  test_ssbj_benchmark.py
