[project]
name = "smart-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools]
packages = ["smart_pipeline"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
