[project]
name = "smart-pipeline"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphviz>=0.21",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openturns>=1.27",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "h5py>=3.15.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.1.0",
]

[tool.setuptools]
packages = ["smart_pipeline"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
