[project]
name = "SmartMDAO"
version = "1.4.0"
description = "Extensible MDAO framework with zero boilerplate integration and plug-and-play optimization."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "graphviz>=0.21",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openturns>=1.27",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "h5py>=3.15.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.1.0",
]

[tool.setuptools]
packages = ["smartmdao"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
